created CRUD feature with user structure
